# catkin_slam

./: .gitignore  .gitmodules  .gitmodules.bk  README.md
docker/: docker copy.sh  docker.sh  dockerinto.sh  dockerinto2.sh  into4.sh  readme.md  switch_enviroment.sh
platform/: README.md
platform/docker/: cyber18.arm_gcc4.8-cuda.dockerfile  cyber18.x86_64_gcc4.8-arm.dockerfile  cyber18.x86_64_gcc4.8.dockerfile  cyber18.x86_64_gcc8.dockerfile  docker.sh  docker_gcc4.8.arm.cuda.sh  docker_gcc4.8.arm.sh  docker_gcc4.8.sh  docker_gcc4.8_into.arm.sh  docker_gcc4.8_into.sh  docker_into.sh  dockerls.sh  x86_64.dockerfile  x86_64_cuda.dockerfile
platform/docker/arm-cuda/: cuda-repo-l4t-10-0-local-10.0.326_1.0-1_arm64.deb  libcudnn7-doc_7.5.0.56-1+cuda10.0_arm64.deb  libnvinfer-dev_5.1.6-1+cuda10.0_arm64.deb  libnvinfer-samples_5.1.6-1+cuda10.0_all.deb  libnvinfer5_5.1.6-1+cuda10.0_arm64.deb  tensorrt_5.1.6.1-1+cuda10.0_arm64.deb
platform/docker/installers_arm/: config_gcc.sh  install_python_modules.sh  py27_requirements.txt
src/: readme.md
src/A-LOAM/: CMakeLists copy.txt  CMakeLists.txt  README.md
src/A-LOAM/include/: lego_loam_utility.h
src/A-LOAM/launch/: aloam_velodyne_VLP_16.launch  test_loamlib.launch  test_loamlib2.launch  test_loamlib2d.launch  test_loamlib_d.launch
src/A-LOAM/src/: imageProjection.cpp  laserMapping.cpp  laserOdometry.cpp  main.cc  scanRegistration.cpp  test_lib2.cc
src/A-LOAM/src/bak.abnormal/: imageProjection.cpp  laserMapping.cpp  laserOdometry.cpp  scanRegistration.cpp
src/A-LOAM/src/lib/: cloud_segmentation.cc  cloud_segmentation.h  const_variables.h  data_center.cc  data_center.h  lidar_factor.hpp  lidar_mapping.bk.cc  lidar_odometry.cc  lidar_odometry.h  lidar_refination.cc  lidar_refination.h  loam_odometry.h  timer.h  utility.h
src/A-LOAM/src/lib_20210115/: cloud_segmentation.cc  cloud_segmentation.h  data_center.h
src/LIO-SAM/: CMakeLists.txt  README.md
src/LIO-SAM/config/: params.demo.yaml  params.neolix.yaml  params.yaml
src/LIO-SAM/include/: utility.h
src/LIO-SAM/launch/: run.launch  rundemo.launch
src/LIO-SAM/msg/: adu_common_odometry.msg  adu_common_sensor_inspva.msg  cloud_info.msg.bk  odom_pose.msg
src/LIO-SAM/src/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp
src/LIO-SAM/src_commit/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp
src/LIO-SAM/src_main/: imuPreintegration.cpp  mapOptmization.cpp
src/LeGO-LOAM/: README.md
src/LeGO-LOAM/.git.bk/: config  index  packed-refs
src/LeGO-LOAM/LeGO-LOAM/: CMakeLists.txt
src/LeGO-LOAM/cloud_msgs/: CMakeLists.txt  package.xml
src/VINS-Fusion/.git.bak/: config  index  packed-refs
src/fast_lio/include/: common_lib.h  use-ikfom.hpp
src/fast_lio/src/: IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp
src/faster_lio_gao/.git.bk/: config  index  packed-refs
src/floam/.git.bk/: config  index  packed-refs
src/hdl_graph_slam/: CMakeLists.txt  README.md
src/hdl_graph_slam/.git.bak/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
src/hdl_graph_slam/apps/: floor_detection_nodelet.cpp  hdl_graph_slam_nodelet.cpp  prefiltering_nodelet.cpp  scan_matching_odometry_nodelet.cpp
src/hdl_graph_slam/launch/: app_floor_detection.launch  hdl_graph_slam.launch  hdl_graph_slam_400.launch  hdl_graph_slam_501.launch  vp_mappping.launch
src/hdl_graph_slam/scripts/: bag_player.py
src/hdl_localization/.git.bak/: config  index  packed-refs
src/hdl_localization/apps/: hdl_localization_nodelet.cpp
src/hdl_localization/launch/: hdl_localization.launch
src/lio-mapping/.git.bak/: config  index  packed-refs
src/lio-mapping/docker/: test.sh
src/loam_livox/.git.bak/: config  index  packed-refs
src/loam_velodyne/: zhihu1_loam_scan_registration.cc  zhihu2_loam_lasermapping.cc  zhihu3_loam_dr.cc
src/neolix_msgs/: channel_info.txt
src/neolix_msgs/adu_common_control_controlcommand_msgs/: CMakeLists.txt  package.xml
src/neolix_msgs/adu_common_control_controlcommand_msgs/msg/: adu_common_control_controlcommand.msg  contrl_context.msg  control_header.msg  depended_modules.msg  lat_ctrl_ctx.msg  long_ctrl_ctx.msg
src/neolix_msgs/adu_common_localization_localizationestimate_msgs/: CMakeLists.txt  package.xml
src/neolix_msgs/adu_common_localization_localizationestimate_msgs/msg/: adu_common_localization_localizationestimate.msg  gnss_map_offset.msg  localization_header.msg  localization_pose.msg  msf_init_details.msg  msf_status.msg  sensor_status.msg
src/neolix_msgs/adu_common_odometry_msgs/: CMakeLists.txt  package.xml
src/neolix_msgs/adu_common_perception_perceptionobstacles_msgs/: CMakeLists.txt  package.xml
src/neolix_msgs/adu_common_perception_perceptionobstacles_msgs/msg/: adu_common_perception_perceptionobstacles.msg  obstacles_header.msg  perception_obstacle.msg
src/neolix_msgs/adu_common_planning_adctrajectory_msgs/: CMakeLists.txt  package.xml
src/neolix_msgs/adu_common_sensor_heading_msgs/: CMakeLists.txt  package.xml
src/neolix_msgs/adu_common_sensor_inspva_msgs/: CMakeLists.txt  package.xml
src/neolix_msgs/adu_common_sensor_inspva_msgs/msg/: adu_common_sensor_inspva.msg  novatel_header.msg
src/neolix_msgs/adu_common_status_chassis_msgs/: CMakeLists.txt  package.xml
src/neolix_msgs/adu_prediction_predictionobstacles_msgs/: CMakeLists.txt  package.xml
src/neolix_msgs/adu_prediction_predictionobstacles_msgs/msg/: adu_prediction_predictionobstacles.msg  obstacles_header.msg  prediction_obstacle.msg
src/neolix_msgs/baidu_idl_car_canbus_pbcarstatus_msgs/: CMakeLists.txt  package.xml
src/neolix_msgs/baidu_idl_car_canbus_pbcarstatus_msgs/msg/: aeb.msg  baidu_idl_car_canbus_pbcarstatus.msg  battery.msg  brake.msg  ems.msg  epb.msg  eps.msg  gas.msg  gear.msg  handshake.msg  license_new.msg  safety.msg  ultrasonic.msg  vehicle_spd.msg
src/neolix_msgs/baidu_idl_car_canbus_pbwheelspeed_msgs/: CMakeLists.txt  package.xml
src/neolix_msgs/baidu_idl_car_canbus_pbwheelspeed_msgs/msg/: baidu_idl_car_canbus_pbwheelspeed.msg
src/sc-series/: readme.md
(+128 files in other folders)
